compiler/lume_hir/src/lower/snapshots/lume_hir__lower__tests__loop_snapshots@pred_loop_statement.snap
---
source: compiler/lume_hir/src/lower/tests.rs
description: "while true { let a = 0; }"
---
[
    Statement {
        id: 0,
        kind: PredicateLoop(
            PredicateLoop {
                id: 0,
                condition: Expression {
                    id: 5871781006564002453,
                    location: <internal>:6:10,
                    kind: Literal(
                        Literal {
                            id: 5871781006564002453,
                            location: <internal>:6:10,
                            kind: Boolean(
                                BooleanLiteral {
                                    id: 5871781006564002453,
                                    value: true,
                                },
                            ),
                        },
                    ),
                },
                block: Block {
                    statements: [
                        Statement {
                            id: 11743562013128004906,
                            kind: Variable(
                                VariableDeclaration {
                                    id: 11743562013128004906,
                                    name: Identifier {
                                        name: "a",
                                        location: <internal>:17:18,
                                    },
                                    declared_type: None,
                                    value: Expression {
                                        id: 17615343019692007359,
                                        location: <internal>:21:22,
                                        kind: Literal(
                                            Literal {
                                                id: 17615343019692007359,
                                                location: <internal>:21:22,
                                                kind: Int(
                                                    IntLiteral {
                                                        id: 17615343019692007359,
                                                        value: 0,
                                                        kind: I32,
                                                    },
                                                ),
                                            },
                                        ),
                                    },
                                },
                            ),
                            location: <internal>:13:23,
                        },
                    ],
                    location: <internal>:11:25,
                },
                location: <internal>:0:25,
            },
        ),
        location: <internal>:0:25,
    },
]
