compiler/lume_hir/src/lower/snapshots/lume_hir__lower__tests__return_snapshots@empty.snap
---
source: compiler/lume_hir/src/lower/tests.rs
description: return;
---
[
    Statement {
        id: 0,
        kind: Return(
            Return {
                id: 0,
                value: None,
            },
        ),
        location: <internal>:0:7,
    },
]
