compiler/lume_hir/src/lower/snapshots/lume_hir__lower__tests__return_snapshots@scalar.snap
---
source: compiler/lume_hir/src/lower/tests.rs
description: return 1;
---
[
    Statement {
        id: 0,
        kind: Return(
            Return {
                id: 0,
                value: Some(
                    Expression {
                        id: 5871781006564002453,
                        location: <internal>:7:8,
                        kind: Literal(
                            Literal {
                                id: 5871781006564002453,
                                location: <internal>:7:8,
                                kind: Int(
                                    IntLiteral {
                                        id: 5871781006564002453,
                                        value: 1,
                                        kind: I32,
                                    },
                                ),
                            },
                        ),
                    },
                ),
            },
        ),
        location: <internal>:0:9,
    },
]
